--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -40,11 +40,10 @@ jobs:
              github-token: ${{ secrets.GIT_ACTIONS }}
           run: |
             git clone https://github.com/cs1867/project.git project
-            ls -al project
+            ls -al project/toolbox/workflows/build_vars.json
             cp project/toolbox/workflows/build_vars.json .
             pwd
-            cat project/build_vars_.json
-            
+             
         - name: Add start time to build_vars.json
           run: |
             jq '.buildstats += { "OS": "${{ matrix.os }}", "start_time": "${{ env.start_time }}", "${{ github.event.repository.name }}-start": "${{ env.start_time }}" }' build_vars.json > updated_build_vars.json
