--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -44,10 +44,10 @@ jobs:
             cp project/toolbox/workflows/build_vars.json .
             pwd
              
-        - name: Add start time to build_vars.json
-          run: |
-            jq '.buildstats += { "OS": "${{ matrix.os }}", "start_time": "${{ env.start_time }}", "${{ github.event.repository.name }}-start": "${{ env.start_time }}" }' build_vars.json > updated_build_vars.json
-            mv updated_build_vars.json build_vars.json
+       # - name: Add start time to build_vars.json
+       #   run: |
+       #     jq '.buildstats += { "OS": "${{ matrix.os }}", "start_time": "${{ env.start_time }}", "${{ github.event.repository.name }}-start": "${{ env.start_time }}" }' build_vars.json > updated_build_vars.json
+       #     mv updated_build_vars.json build_vars.json
         - name: Display build_vars.json
           run: cat build_vars.json
 
