--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -14,6 +14,7 @@ on:
 env:
   RUN_ID: ${{ github.run_id }}
   BUILD_BRANCH: '5.2.0'
+  BUILD_TYPE: 'FULL'
 
 jobs: 
 
@@ -43,7 +44,7 @@ jobs:
              
         - name: Add start time to build_vars.json
           run: |
-            jq '.buildstats += { "OS": "${{ matrix.os }}", "start_time": "${{ env.start_time }}", "${{ github.event.repository.name }}-start": "${{ env.start_time }}" }' build_vars.json > updated_build_vars.json
+            jq '.buildstats += { "OS": "${{ matrix.os }}","BUILD_TYPE": "${{ env.BUILD_BRANCH }}",  "start_time": "${{ env.start_time }}", "${{ github.event.repository.name }}-start": "${{ env.start_time }}" }' build_vars.json > updated_build_vars.json
             mv updated_build_vars.json build_vars.json
             
         - name: Display build_vars.json
