--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -92,6 +92,7 @@ jobs:
            echo "BUILD_VARS_JSON=${BUILD_VARS_JSON}"
            
         - name: Pass Workflow
+          if: env.BUILD_TYPE == 'FULL'
           uses: actions/github-script@v6
           with:
            github-token: ${{ secrets.GIT_ACTIONS }}
