--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -49,12 +49,13 @@ jobs:
              github-token: ${{ secrets.GIT_ACTIONS }}
           run: |
             git clone https://github.com/cs1867/project.git project
+            ls project
              case "${{ matrix.os }}" in
               'ol8'|'el9')
-                 cp project/toolbox/workflows/build-vars-el.sh build_vars.json
+                 cp project/toolbox/workflows/build-vars-el.json build_vars.json
                  ;;
               'd11'|'d12'|'u20'|'u24')
-                cp project/toolbox/workflows/build-vars-ub.json build-vars.json
+                cp project/toolbox/workflows/bulid-vars-ub.json build-vars.json
                 ;;
             esac
              
