--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -22,7 +22,7 @@ jobs:
      strategy:  
       matrix:
           #os: [  'ol8', 'el9', 'd11', 'd12', 'u20', 'u22'  ]
-          os: [  'ol8', 'el9', 'u20', 'u22', 'u24' ] 
+          os: [  'd11' ] 
 
      runs-on: ubuntu-latest
 
@@ -56,8 +56,11 @@ jobs:
               'ol8'|'el9')
                  cp project/toolbox/workflows/build-vars-el.json build-vars.json
                  ;;
-              'd11'|'d12'|'u20'|'u22'|'u24')
+              'u20'|'u22'|'u24')
                 cp project/toolbox/workflows/bulid-vars-ub.json build-vars.json
+                ;;
+              'd11'|'d12')
+                cp project/toolbox/workflows/bulid-vars-db.json build-vars.json
                 ;;
             esac
              
