--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -1,27 +1,20 @@
 name: minor-packages-workflow
 
 on:
-  schedule:
-    - cron: "25 02 * * *" 
-  #push:    
-  #  branches: [ 'github-workflow' ]  
+  workflow_dispatch: 
+    inputs: 
+      BUILD_VARS_JSON:
+        description: 'Build var json file'
+        required: true      
   workflow_run:
-    workflows: "create workflow pass runid"  
-    branches: [ 'github-workflow' ] 
-    types:   
-      - completed 
-  workflow_dispatch:
-env: 
-  RUN_ID: ${{ github.run_id }} 
-  BUILD_BRANCH: '5.2.0'
-  BUILD_TYPE: 'FULL' 
- 
+    workflows: "Create Artifacts and pass runid"
+    branches: 'github-workflow'
+    types:
+      - completed
+
 jobs:
- 
-  build-minor-packages: 
-     strategy:  
-      matrix:
-          os: [  'ol8', 'el9', 'd11', 'd12', 'u20', 'u22' , 'u24' ] 
+       
+  build-minor-packages:
 
      runs-on: ubuntu-latest
 
@@ -113,18 +106,18 @@ jobs:
            echo "BUILD_VARS_JSON=${BUILD_VARS_JSON}" >> $GITHUB_ENV
            echo "BUILD_VARS_JSON=${BUILD_VARS_JSON}"
            
-        - name: Pass Workflow
-          if: env.BUILD_TYPE == 'FULL'
-          uses: actions/github-script@v6
-          with:
-           github-token: ${{ secrets.GIT_ACTIONS }}
-           script: |
-             await github.rest.actions.createWorkflowDispatch({
-               owner: 'cs1867',
-               repo:  '${{ env.NEXTREPO}}',
-               workflow_id: '${{ env.NEXTREPO }}-workflow.yml',
-               ref: 'github-workflow',
-              inputs: {
-                 BUILD_VARS_JSON: '${{ env.BUILD_VARS_JSON}}'
-               }
-             })
+   #     - name: Pass Workflow
+   #       if: env.BUILD_TYPE == 'FULL'
+   #       uses: actions/github-script@v6
+   #       with:
+   #        github-token: ${{ secrets.GIT_ACTIONS }}
+   #        script: |
+   #          await github.rest.actions.createWorkflowDispatch({
+   #            owner: 'cs1867',
+   #            repo:  '${{ env.NEXTREPO}}',
+   #            workflow_id: '${{ env.NEXTREPO }}-workflow.yml',
+   #            ref: 'github-workflow',
+   #           inputs: {
+   #              BUILD_VARS_JSON: '${{ env.BUILD_VARS_JSON}}'
+   #            }
+   #          })
