--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -20,88 +20,98 @@ jobs:
 
      steps:
 
-        - name: Check if triggered by cron
-          if: ${{ github.event_name == 'schedule' }}
-          run: echo "This was triggered by the cron schedule."
-
-        - name: Check if triggered by push
-          if: ${{ github.event_name == 'push' }}
-          run: echo "This was triggered by a push event."
-          
-        - name: Capture start date and time
-          id: start_time
-          run: echo "start_time=$(date -u)" >> $GITHUB_ENV
-
-        - name: Check out Repo
-          uses: actions/checkout@v4
-          with:
+       - name: Capture start date and time
+         id: start_time
+         run: echo "start_time=$(date -u)" >> $GITHUB_ENV
+       
+       - name: Add start time to build-vars.json
+         run: |
+           modified_json=$(echo '${{ github.event.inputs.BUILD_VARS_JSON }}' | jq '.buildstats += { "${{ github.event.repository.name }}-start": "${{ env.start_time }}" }' )
+           BUILD_VARS_JSON=$(echo "$modified_json" | jq -c '.')
+           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" >> $GITHUB_ENV
+           
+       - name: Get build vars from input file
+         id: extract-build-vars
+         run: |
+           BUILD_OS=$(echo  "$BUILD_VARS_JSON" | jq -r '.buildstats.OS' )
+           BUILD_BRANCH=$(echo  "$BUILD_VARS_JSON" | jq -r '.buildstats.BUILD_BRANCH' )
+           BUILD_TYPE=$(echo  "$BUILD_VARS_JSON" | jq -r '.buildstats.BUILD_TYPE' )
+           echo "BUILD_OS=$BUILD_OS" >> $GITHUB_ENV 
+           echo "BUILD_BRANCH=$BUILD_BRANCH" >> $GITHUB_ENV
+           echo "BUILD_TYPE=$BUILD_TYPE" >> $GITHUB_ENV
+           echo "BUILD_OS=$BUILD_OS"
+           echo "BUILD_BRANCHN=$BUILD_BRANCH"
+           echo "BUILD_TYPE=$BUILD_TYPE"       
+            
+       - name: Check out Repo
+         uses: actions/checkout@v4
+         with:
            ref: ${{ env.BUILD_BRANCH }}
 
-        - name: Fetch build-vars.json from projects
-          env:
-             github-token: ${{ secrets.GIT_ACTIONS }}
-          run: |
-            git clone https://github.com/cs1867/project.git project
-            echo "list dir"
-            ls project/toolbox/workflows/
-             case "${{ matrix.os }}" in
-              'ol8'|'el9')
-                 cp project/toolbox/workflows/build-vars-el.json build-vars.json
-                 ;;
-              'u20'|'u22'|'u24')
-                cp project/toolbox/workflows/bulid-vars-ub.json build-vars.json
-                ;;
-              'd11'|'d12')
-                cp project/toolbox/workflows/bulid-vars-db.json build-vars.json
-                ;;
-            esac
-             
-             
-        - name: Add start time to build-vars.json
-          run: |
-            jq '.buildstats += { "OS": "${{ matrix.os }}", "BUILD_BRANCH": "${{ env.BUILD_BRANCH }}", "BUILD_TYPE": "${{ env.BUILD_TYPE }}", "start_time": "${{ env.start_time }}", "${{ github.event.repository.name }}-start": "${{ env.start_time }}" }' build-vars.json > updated_build-vars.json
-            mv updated_build-vars.json build-vars.json
-            
-        - name: Display build-vars.json
-          run: cat build-vars.json
+       - name: Delete current repo from build
+         id: modify_json
+         run: |
+           modified_json=$(echo "$BUILD_VARS_JSON" | jq 'del(.repos[0])')
+           BUILD_VARS_JSON=$(echo "$modified_json" | jq -c '.')
+           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" >> $GITHUB_ENV
+           echo "**** next next ****"
+           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" 
+          
+       - name: Look up the next repo name to build
+         id: extract_repo_name
+         run: |
+           echo "BUILD_VARS_JSON value is: $BUILD_VARS_JSON"
+           NEXTREPO=$(echo  "$BUILD_VARS_JSON" | jq -r '.repos[0].name' )
+           echo "NEXTREPO=$NEXTREPO" >> $GITHUB_ENV  
 
-        - name: run docker oneshot builder
-          run: |
+       - name: Add GitHub run ID to buildids
+         id: add_run_id
+         run: |
+           GITHUB_RUN_ID=${{ github.run_id }}
+           modified_json=$(echo "$BUILD_VARS_JSON" | jq --arg run_id "$GITHUB_RUN_ID" '.buildids."${{ github.event.repository.name }}" = $run_id')
+           BUILD_VARS_JSON=$(echo "$modified_json" | jq -c '.')
+           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" >> $GITHUB_ENV
+            
+       - name: Create a temporary artifact downloads folder
+         run: mkdir aritfacts
+
+       - name: run docker oneshot builder
+         run: |
            echo " run the oneshot"
            curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - . '${{ matrix.os }}'
  
-        - uses: actions/upload-artifact@v4
-          with:
+       - uses: actions/upload-artifact@v4
+         with:
             name: ${{ github.event.repository.name }}-${{ matrix.os }}
             path: unibuild-repo
             retention-days: 5
 
-        - name: update build-vars.json
-          run: |
+       - name: update build-vars.json
+         run: |
            jq 'del(.repos[0])' build-vars.json > tmp.json
            mv tmp.json  build-vars.json
            jq --arg run_id "${{ github.run_id }}" '.buildids += { "minor-packages": $run_id }'  build-vars.json  > tmp.json
            mv tmp.json  build-vars.json
            
-        - name: Extract repo name
-          id: extract_repo_name
-          run: |
+       - name: Extract repo name
+         id: extract_repo_name
+         run: |
             jq -r '.repos[0].name' build-vars.json
             NEXTREPO=$(jq -r '.repos[0].name' build-vars.json )
             echo "NEXTREPO=${NEXTREPO}" >> $GITHUB_ENV
             
-        - name: Capture start end and time
-          id: end_time
-          run: echo "end_time=$(date -u)" >> $GITHUB_ENV
+       - name: Capture start end and time
+         id: end_time
+         run: echo "end_time=$(date -u)" >> $GITHUB_ENV
 
-        - name: Add end time to build-vars.json
-          run: |
+       - name: Add end time to build-vars.json
+         run: |
             jq '.buildstats += {"${{ github.event.repository.name }}-end": "${{ env.end_time }}"}' build-vars.json > updated_build-vars.json
             mv updated_build-vars.json build-vars.json
 
-        - name: Set build-vars.json as workflow variable
-          id: set_build-vars
-          run: |
+       - name: Set build-vars.json as workflow variable
+         id: set_build-vars
+         run: |
            BUILD_VARS_JSON=$(jq -c . build-vars.json)
            echo "BUILD_VARS_JSON=${BUILD_VARS_JSON}" >> $GITHUB_ENV
            echo "BUILD_VARS_JSON=${BUILD_VARS_JSON}"
