--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -75,10 +75,10 @@ jobs:
        - name: Create a temporary artifact downloads folder
          run: mkdir aritfacts
 
- #      - name: run docker oneshot builder
- #        run: |
- #          echo " run the oneshot"
- #          curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - . '${{ matrix.os }}'
+       - name: run docker oneshot builder
+         run: |
+           echo " run the oneshot"
+           curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - . '${{ matrix.os }}'
  
        - uses: actions/upload-artifact@v4
          with:
@@ -96,18 +96,18 @@ jobs:
           BUILD_VARS_JSON=$(echo "$modified_json" | jq -c '.')
           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" >> $GITHUB_ENV
            
-   #     - name: Pass Workflow
-   #       if: env.BUILD_TYPE == 'FULL'
-   #       uses: actions/github-script@v6
-   #       with:
-   #        github-token: ${{ secrets.GIT_ACTIONS }}
-   #        script: |
-   #          await github.rest.actions.createWorkflowDispatch({
-   #            owner: 'cs1867',
-   #            repo:  '${{ env.NEXTREPO}}',
-   #            workflow_id: '${{ env.NEXTREPO }}-workflow.yml',
-   #            ref: 'github-workflow',
-   #           inputs: {
-   #              BUILD_VARS_JSON: '${{ env.BUILD_VARS_JSON}}'
-   #            }
-   #          })
+       - name: Pass Workflow
+         if: env.BUILD_TYPE == 'FULL'
+         uses: actions/github-script@v6
+         with:
+           github-token: ${{ secrets.GIT_ACTIONS }}
+           script: |
+             await github.rest.actions.createWorkflowDispatch({
+               owner: 'cs1867',
+               repo:  '${{ env.NEXTREPO}}',
+               workflow_id: '${{ env.NEXTREPO }}-workflow.yml',
+               ref: 'github-workflow',
+              inputs: {
+                 BUILD_VARS_JSON: '${{ env.BUILD_VARS_JSON}}'
+               }
+             })
