--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -82,7 +82,7 @@ jobs:
           
        - uses: actions/upload-artifact@v4
          with:
-            name: ${{ github.event.repository.name }}-${{ matrix.os }}
+            name: ${{ github.event.repository.name }}-${{ env.BUILD_OS }}
             path: unibuild-repo
             retention-days: 5
 
