--- a/.github/workflows/minor-packages-workflow.yml
+++ b/.github/workflows/minor-packages-workflow.yml
@@ -14,100 +14,29 @@ on:
 
 jobs:
        
-  build-minor-packages:
+  prepare-build:
+    uses: cs1867/project/.github/workflows/prepare-build.yml@master
+    with:
+      BUILD_VARS_JSON: ${{ inputs.BUILD_VARS_JSON }}
+    
+  oneshot-build:
+    needs: prepare-build
+    uses: cs1867/project/.github/workflows/oneshot-builder.yml@master
+    with:
+      BUILD_OS: ${{ needs.prepare-build.outputs.BUILD_OS }}
+      BUILD_TYPE: ${{ needs.prepare-build.outputs.BUILD_TYPE }}
+      BUILD_BRANCH: ${{ needs.prepare-build.outputs.BUILD_BRANCH }}
+      BUILD_VARS_JSON: ${{ needs.prepare-build.outputs.BUILD_VARS_JSON }}
 
-     runs-on: ubuntu-latest
-
-     steps:
-
-       - name: Capture start date and time
-         id: start_time
-         run: echo "start_time=$(date -u)" >> $GITHUB_ENV
-       
-       - name: Add start time to build-vars.json
-         run: |
-           modified_json=$(echo '${{ github.event.inputs.BUILD_VARS_JSON }}' | jq '.buildstats += { "${{ github.event.repository.name }}-start": "${{ env.start_time }}" }' )
-           BUILD_VARS_JSON=$(echo "$modified_json" | jq -c '.')
-           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" >> $GITHUB_ENV
-           
-       - name: Get build vars from input file
-         id: extract-build-vars
-         run: |
-           BUILD_OS=$(echo  "$BUILD_VARS_JSON" | jq -r '.buildstats.OS' )
-           BUILD_BRANCH=$(echo  "$BUILD_VARS_JSON" | jq -r '.buildstats.BUILD_BRANCH' )
-           BUILD_TYPE=$(echo  "$BUILD_VARS_JSON" | jq -r '.buildstats.BUILD_TYPE' )
-           echo "BUILD_OS=$BUILD_OS" >> $GITHUB_ENV 
-           echo "BUILD_BRANCH=$BUILD_BRANCH" >> $GITHUB_ENV
-           echo "BUILD_TYPE=$BUILD_TYPE" >> $GITHUB_ENV
-           echo "BUILD_OS=$BUILD_OS"
-           echo "BUILD_BRANCHN=$BUILD_BRANCH"
-           echo "BUILD_TYPE=$BUILD_TYPE"       
-            
-    #  - name: Check out Repo
-    #     uses: actions/checkout@v4
-    #     with:
-    #       ref: ${{ env.BUILD_BRANCH }}
-
-       - name: Delete current repo from build
-         id: modify_json
-         run: |
-           modified_json=$(echo "$BUILD_VARS_JSON" | jq 'del(.repos[0])')
-           BUILD_VARS_JSON=$(echo "$modified_json" | jq -c '.')
-           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" >> $GITHUB_ENV
-           echo "**** next next ****"
-           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" 
-          
-       - name: Look up the next repo name to build
-         id: extract_repo_name
-         run: |
-           echo "BUILD_VARS_JSON value is: $BUILD_VARS_JSON"
-           NEXTREPO=$(echo  "$BUILD_VARS_JSON" | jq -r '.repos[0].name' )
-           echo "NEXTREPO=$NEXTREPO" >> $GITHUB_ENV  
-
-       - name: Add GitHub run ID to buildids
-         id: add_run_id
-         run: |
-           GITHUB_RUN_ID=${{ github.run_id }}
-           modified_json=$(echo "$BUILD_VARS_JSON" | jq --arg run_id "$GITHUB_RUN_ID" '.buildids."${{ github.event.repository.name }}" = $run_id')
-           BUILD_VARS_JSON=$(echo "$modified_json" | jq -c '.')
-           echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" >> $GITHUB_ENV
-            
-       - name: Create a temporary artifact downloads folder
-         run: mkdir aritfacts
-
-
-    #   - name: run docker oneshot builder
-    #     run: |
-    #      curl -s https://raw.githubusercontent.com/perfsonar/docker-oneshot-builder/main/build | sh -s - . '${{ env.BUILD_OS }}'  
-          
-     #  - uses: actions/upload-artifact@v4
-     #    with:
-     #       name: ${{ github.event.repository.name }}-${{ env.BUILD_OS }}
-     #       path: unibuild-repo
-     #       retention-days: 5
-
-       - name: Capture end date and time
-         id: end_time
-         run: echo "end_time=$(date -u)" >> $GITHUB_ENV
-       
-       - name: Add end time to build-vars.json
-         run: |
-          modified_json=$(echo "$BUILD_VARS_JSON" | jq '.buildstats += { "${{ github.event.repository.name }}-end": "${{ env.end_time }}" }' )
-          BUILD_VARS_JSON=$(echo "$modified_json" | jq -c '.')
-          echo "BUILD_VARS_JSON=$BUILD_VARS_JSON" >> $GITHUB_ENV
-           
-       - name: Pass Workflow
-         if: env.BUILD_TYPE == 'FULL'
-         uses: actions/github-script@v6
-         with:
-           github-token: ${{ secrets.GIT_ACTIONS }}
-           script: |
-             await github.rest.actions.createWorkflowDispatch({
-               owner: 'cs1867',
-               repo:  '${{ env.NEXTREPO}}',
-               workflow_id: '${{ env.NEXTREPO}}-workflow.yml',
-               ref: 'github-workflow',
-              inputs: {
-                 BUILD_VARS_JSON: '${{ env.BUILD_VARS_JSON}}'
-               }
-             })
+  post-build:
+    needs: 
+      - prepare-build
+      - oneshot-build
+    uses: cs1867/project/.github/workflows/post-build.yml@master
+    secrets:
+      GIT_ACTIONS: ${{ secrets.GIT_ACTIONS }}
+    with:
+      BUILD_OS: ${{ needs.prepare-build.outputs.BUILD_OS }}
+      BUILD_TYPE: ${{ needs.prepare-build.outputs.BUILD_TYPE }}
+      BUILD_BRANCH: ${{ needs.prepare-build.outputs.BUILD_BRANCH }}
+      BUILD_VARS_JSON: ${{ needs.prepare-build.outputs.BUILD_VARS_JSON }}
